# finance-tracker

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose-example.yml  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg  setup.sh  supervisord.conf
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  main.yml  pr.yml  publish-release-test.yml  publish-release.yml  pylint-suggestions.yml  pylint.yml  release.yml  snyk.yml
backend/: Dockerfile  Makefile  entrypoint.py  pyproject.toml
backend/finance_tracker/: __main__.py  constants.py
backend/finance_tracker/aggregators/: aggregator_by_month.py
backend/finance_tracker/categories/: categories.py  categorizer.py  category_searcher.py
backend/finance_tracker/entries/: categorized_entry.py  entry.py  revolut_entry.py  santander_entry.py  trading212_entry.py
backend/finance_tracker/money/: currency_codes.py  money.py
backend/finance_tracker/readers/: base_reader.py  entry_reader.py  reader_dispatcher.py  revolut_reader.py  santander_reader.py  trading212_reader.py
backend/tests/: conftest.py  test_api.py
backend/tests/categories/: test_categorizer.py  test_category_searcher.py
backend/tests/entries/: test_categorized_entry.py  test_entry.py  test_revolut_entry.py  test_trading212_entry.py
backend/tests/money/: test_currency_codes.py  test_money.py
backend/tests/readers/: test_entry_reader.py  test_reader_dispatcher.py  test_revolut_reader.py  test_santander_reader.py  test_trading212_reader.py
backend/tests/readers/files/: test_entry_reader_no_entries.csv  test_entry_reader_one_entry.csv  test_entry_reader_one_entry_new_format.csv  test_entry_reader_several_entries.csv  test_revolut_reader_utf8_entry.csv  test_santander_reader_decimal_comma_new_format.csv  test_santander_reader_no_entries.csv  test_santander_reader_one_entry.csv  test_santander_reader_one_entry_new_format.csv  test_santander_reader_quoted_concept_new_format.csv  test_santander_reader_several_entries.csv  test_trading212_reader_dividend_entry.csv  test_trading212_reader_dividend_with_suffix.csv  test_trading212_reader_empty_row_mid_file.csv  test_trading212_reader_market_buy_negative_total_in_csv.csv  test_trading212_reader_merchant_at_col_17.csv  test_trading212_reader_merchant_at_col_19.csv  test_trading212_reader_no_entries.csv  test_trading212_reader_one_card_debit_entry.csv  test_trading212_reader_one_entry_no_merchant.csv  test_trading212_reader_several_entries.csv  test_trading212_reader_uses_zero_for_empty_total.csv  test_trading212_reader_utc_timestamp.csv
finance_tracker/: __main__.py  printer.py
finance_tracker/aggregators/: aggregator_by_month.py  categories_quantity_aggregator.py
finance_tracker/categories/: categories.py  categorizer.py  category_searcher.py
finance_tracker/entries/: categorized_entry.py  entry.py  revolut_entry.py
finance_tracker/money/: currency_codes.py  money.py
finance_tracker/readers/: base_reader.py  entry_reader.py  revolut_reader.py
frontend/: Dockerfile  Makefile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  App.test.jsx
frontend/src/charts/: CategoryPieChart.jsx  IncomeExpensesChart.jsx  MonthlyBarChart.jsx
frontend/src/components/: DifferenceTable.jsx  FinanceTable.jsx  Layout.jsx  MonthSelector.jsx  Sidebar.jsx  SummaryCard.jsx  SummaryCard.test.jsx  ThemeToggle.jsx  UncategorizedTable.jsx  UncategorizedTable.test.jsx
frontend/src/context/: DataContext.jsx
frontend/src/pages/: CategoriesPage.jsx  CategoriesPage.test.jsx  DashboardPage.jsx  DashboardPage.test.jsx  EntriesPage.jsx  EntriesPage.test.jsx  ExpensesPage.jsx  IncomePage.jsx  ReportsPage.jsx  SettingsPage.jsx
frontend/src/utils/: finance.js  finance.test.js
tests/: conftest.py
tests/aggregators/: test_aggregator_by_month.py  test_categories_quantity_aggregator.py
tests/categories/: test_categories.py  test_categorizer.py  test_category_searcher.py
tests/entries/: test_categorized_entry.py  test_entry.py  test_revolut_entry.py
tests/money/: test_money.py
tests/readers/: test_entry_reader.py  test_revolut_reader.py
tests/readers/files/: test_entry_reader_no_entries.csv  test_entry_reader_one_entry.csv  test_entry_reader_several_entries.csv  test_revolut_reader_no_entries.csv  test_revolut_reader_one_entry.csv  test_revolut_reader_several_entries.csv
