[tool.poetry]
name = "finance-tracker"
version = "0.1.0"
description = "Python tool to track finances over a year"
authors = ["w0rmr1d3r"]

[tool.poetry.dependencies]
inquirer = "^2.10.0"
pandas = "^1.4.3"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
  | \.venv
  | venv
)/
'''
