[tool.poetry]
name = "finance-tracker"
version = "1.1.0"
description = "Python tool to track finances over a year"
license = "MIT"
authors = ["w0rmr1d3r"]
readme = "README.md"
include = ["load/**"]
homepage = "https://github.com/w0rmr1d3r/finance-tracker"
repository = "https://github.com/w0rmr1d3r/finance-tracker"
documentation = "https://github.com/w0rmr1d3r/finance-tracker"
keywords = ["finance", "tracker", "poetry"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
Deprecated = "^1.2.13"
inquirer = "^2.10.0"
pandas = "^1.5.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
faker = "^15.0.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pylint = "^2.15.4"
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "C0114"

[tool.black]
line-length = 120
exclude = '''
/(
  | \.venv
  | venv
)/
'''
